--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@
 
 @media (max-width: 768px) {
   .p-4 {
-    padding: 0px;
+    padding: 3px;
   }
 }
 
@@ -92,5 +92,11 @@
 @media (max-width: 768px) {
   .rounded-xl {
     border-radius: 0rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .bg-secondary {
+    background-color: hsl(144.09deg 61.29% 73.09%);
   }
 }
